@@ -129,7 +129,7 @@ class ArloBackEnd(object):
             with self._req_lock:
                 if host is None:
                     host = self._arlo.cfg.host
-                url = host + path
+                url = self._add_extra_params(host + path)
                 self._arlo.vdebug("request-url={}".format(url))
                 self._arlo.vdebug("request-params=\n{}".format(pprint.pformat(params)))
                 self._arlo.vdebug(
@@ -192,6 +192,15 @@ class ArloBackEnd(object):
 
     def gen_trans_id(self, trans_type=TRANSID_PREFIX):
         return trans_type + "!" + str(uuid.uuid4())
+
+    def _add_extra_params(self, url):
+        if '?' in url:
+            url = url + '&'
+        else:
+            url = url + '?'
+        eid = str(uuid.uuid4())
+        now = time_to_arlotime()
+        return f"{url}event_id=FE!{eid}&time={now}"
 
     def _event_dispatcher(self, response):
 
